--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset=utf-8/>
 <title>My First React Router App</title>
-<div id=app>hi</div>
+<div id=app></div>
 <link rel=stylesheet href=/index.css>
 <script src="/bundle.js"></script>
 
