--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,6 +14,7 @@
         <li><a href="#/add">Add Dashboard</a></li>
         <li><a href="#/login">Login/Signup</a></li>
         <li><a href="#/setup">Setup</a></li>
+        <li><a href="#/dashboard">Dashboard</a></li>
       </ul>
     </nav>
   </header>
