--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -1,1 +1,5 @@
 <h1>Home route (dashboard list)</h1>
+
+<ul ng-repeat="dashboard in dashboards">
+  <li>{{dashboard.org_name}} / {{dashboard.repo_name}}</li>
+</ul>
