--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -1,5 +1,7 @@
 <h1>Home route (dashboard list)</h1>
 
+<a href="#/add"><button>Add a new dashboard</button></a>
+
 <ul ng-repeat="dashboard in dashboards">
   <li>{{dashboard.org_name}} / {{dashboard.repo_name}}</li>
 </ul>
