Make home list items link to individual dashboard pages

--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -3,5 +3,7 @@
 <a href="#/add"><button>Add a new dashboard</button></a>
 
 <ul ng-repeat="dashboard in dashboards">
-  <li>{{dashboard.org_name}} / {{dashboard.repo_name}}</li>
+  <a href="#/{{dashboard.org_name}}/{{dashboard.repo_name}}">
+    <li>{{dashboard.org_name}} / {{dashboard.repo_name}}</li>
+  </a>
 </ul>
