Rename '/' from 'dashboards' to 'home' (in nav)

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#/">Dashboards</a></li>
+          <li><a href="#/">Home</a></li>
           <li><a href="#/add">Add Dashboard</a></li>
           <li><a href="#/login">Login/Signup</a></li>
           <li><a href="#/AudibleBoulders/AudibleBoulders/setup">AudibleBoulders Setup</a></li>
