Add login/logout functionality to client

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,9 +13,10 @@
         <ul>
           <li><a href="#/">Home</a></li>
           <li><a href="#/add">Add Dashboard</a></li>
-          <li><a href="#/login">Login/Signup</a></li>
+          <li><a href="login/github">Login/Signup</a></li>
           <li><a href="#/AudibleBoulders/AudibleBoulders/setup">AudibleBoulders Setup</a></li>
           <li><a href="#/AudibleBoulders/AudibleBoulders">AudibleBoulders Dashboard</a></li>
+          <li><a href="logout">Logout</a></li>
         </ul>
       </nav>
     </header>
