Use ngcookies to implement auth on angular routes Add logout module and authFactory  Changes to be committed: 	modified:   src/client/app/app.js 	modified:   src/client/app/home/home.js 	modified:   src/client/app/login/login.html 	new file:   src/client/app/logout/logout.html 	new file:   src/client/app/logout/logout.js 	modified:   src/client/app/services/services.js 	modified:   src/client/index.html 	modified:   src/server/server.js

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,10 +13,9 @@
         <ul>
           <li><a href="#/">Home</a></li>
           <li><a href="#/add">Add Dashboard</a></li>
-          <li><a href="login/github">Login/Signup</a></li>
           <li><a href="#/AudibleBoulders/AudibleBoulders/setup">AudibleBoulders Setup</a></li>
           <li><a href="#/AudibleBoulders/AudibleBoulders">AudibleBoulders Dashboard</a></li>
-          <li><a href="logout">Logout</a></li>
+          <li><a href="#/logout">Logout</a></li>
         </ul>
       </nav>
     </header>
@@ -34,6 +33,7 @@
     <!-- Angular Modules -->
     <script src="app/services/services.js"></script>
     <script src="app/login/login.js"></script>
+    <script src="app/logout/logout.js"></script>
     <script src="app/home/home.js"></script>
     <script src="app/add/add.js"></script>
     <script src="app/setup/setup.js"></script>
