--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -1,1 +1,12 @@
-<h1>Single dashboard view</h1>
+<div ng-controller='DashboardController'>
+  <h1>{{dashboard.org_name}} / <a href="{{dashboard.repo_link}}">{{dashboard.repo_name}}</a></h1>
+  <h3>Branch: {{dashboard.branch}}</h3>
+  <div>Last Commit: {{dashboard.last_commit}}</div>
+
+  <div class="username" ng-repeat="user in users">
+    <img src="{{user.githubAvatar}}" width="50">{{user.name}} - <a href="https://github.com/{{user.gitHandle}}">{{user.gitHandle}}</a>
+    <div class="diffs" ng-repeat="diff in user.diffs">
+      {{diff.file}} - {{diff.mod_type}} - {{diff.commit_message}}
+    </div>
+  </div>
+</div>
