Implement dashboard client view, added css

--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -3,7 +3,7 @@
   <h3>Branch: {{dashboard.branch}}</h3>
   <div>Last Commit: {{dashboard.last_commit}}</div>
 
-  <div class="username" ng-repeat="user in users">
+  <div class="users" ng-repeat="user in users">
     <img src="{{user.githubAvatar}}" width="50">{{user.name}} - <a href="https://github.com/{{user.gitHandle}}">{{user.gitHandle}}</a>
     <div class="diffs" ng-repeat="diff in user.diffs">
       {{diff.file}} - {{diff.mod_type}} - {{diff.commit_message}}
