Add user subscriptions, change database schema to snake case  Changes to be committed: 	modified:   src/client/app/add/add.html 	modified:   src/client/app/add/add.js 	modified:   src/server/request-handlers/setup.js 	modified:   src/server/request-handlers/users.js 	modified:   src/server/test-data/test-data.sql

--- a/src/client/app/add/add.html
+++ b/src/client/app/add/add.html
@@ -1,1 +1,7 @@
 <h1>Add</h1>
+<p>Choose a Repo to Add to Your Dashboard</p>
+<ul>
+  <li ng-repeat="repo in subsc">
+    {{ repo.full_name }}
+  </li>
+</ul>
