--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -4,7 +4,7 @@
   <div>Last Commit: {{dashboard.last_commit}}</div>
 
   <div class="users" ng-repeat="user in users">
-    <img class="gitimg" src="{{user.githubAvatar}}">{{user.name}} - <a href="https://github.com/{{user.gitHandle}}">{{user.gitHandle}}</a>
+    <img class="gitimg" src="{{user.github_avatar}}">{{user.name}} - <a href="https://github.com/{{user.git_handle}}">{{user.git_handle}}</a>
     <div class="diffs" ng-repeat="diff in user.diffs">
       {{diff.file}} - {{diff.mod_type}} - {{diff.commit_message}}
     </div>
