Call postDashboard when a repo is clicked on add page
Also removed now-unnecessary links from nav bar, and added a setup link to dashboard view.
	modified:   src/client/app/add/add.html
	modified:   src/client/app/add/add.js
	modified:   src/client/app/dashboard/dashboard.html
	modified:   src/client/app/home/home.html
	modified:   src/client/index.html
	modified:   src/server/request-handlers/dashboards.js

--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -1,4 +1,7 @@
 <div ng-controller='DashboardController'>
+
+  <a href="#/{{dashboard.org_name}}/{{dashboard.repo_name}}/setup"><button>Setup instructions</button></a>
+
   <h1>{{dashboard.org_name}} / <a href="{{dashboard.repo_link}}">{{dashboard.repo_name}}</a></h1>
   <h3>Branch: {{dashboard.branch}}</h3>
   <div>Last Commit: {{dashboard.last_commit}}</div>
