--- a/src/client/app/add/add.html
+++ b/src/client/app/add/add.html
@@ -1,7 +1,7 @@
 <h1>Add</h1>
 <p>Choose a Repo to Add to Your Dashboard</p>
 <ul>
-  <li ng-repeat="repo in subsc">
+  <li ng-click="postDashboard(repo)" ng-repeat="repo in subsc">
     {{ repo.full_name }}
   </li>
 </ul>
