--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -1,15 +1,21 @@
 <div ng-controller='DashboardController'>
 
-  <a href="#/{{dashboard.org_name}}/{{dashboard.repo_name}}/setup"><button>Setup instructions</button></a>
+  <a href="#/{{dashboard.org_name}}/{{dashboard.repo_name}}/setup"><button type="button" class="btn btn-info btn-sm">Setup instructions</button></a>
 
   <h1>{{dashboard.org_name}} / <a href="{{dashboard.repo_link}}">{{dashboard.repo_name}}</a></h1>
   <h3>Branch: {{dashboard.branch}}</h3>
   <div>Last Commit: {{dashboard.last_commit}}</div>
 
-  <div class="users" ng-repeat="user in users">
-    <img class="gitimg" src="{{user.github_avatar}}">{{user.name}} - <a href="https://github.com/{{user.git_handle}}">{{user.git_handle}}</a>
-    <div class="diffs" ng-repeat="diff in user.diffs">
-      {{diff.file}} - {{diff.mod_type}} - {{diff.commit_message}}
+  <div ng-repeat="user in users">
+    <div ng-class="[users, { upToDate: user.up_to_date === 1, outOfDate: user.up_to_date === 0, notSetUp: user.set_up === 0 }]">
+      <img class="gitimg" src="{{user.github_avatar}}">
+      {{user.name}} - <a href="https://github.com/{{user.git_handle}}">{{user.git_handle}}</a>
+      <span ng-show="user.up_to_date" class="alignright status"><span class="glyphicon glyphicon-ok-sign"></span></span>
+      <span ng-show="!user.up_to_date && user.set_up" class="alignright status"><span class="glyphicon glyphicon-exclamation-sign"></span></span>
+      <span ng-show="!user.up_to_date && !user.set_up" class="alignright status"><span class="glyphicon glyphicon-exclamation-sign"></span> User is not yet set up</span>
+      <div class="diffs" ng-repeat="diff in user.diffs">
+        {{diff.file}} - {{diff.mod_type}} - {{diff.commit_message}}
+      </div>
     </div>
   </div>
 </div>
