--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>GitSpy</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
   </head>
 
   <body>
