Add click reaction and repo added message  Changes to be committed: 	modified:   src/client/app/add/add.html 	modified:   src/client/app/add/add.js 	modified:   src/client/styles/style.css

--- a/src/client/app/add/add.html
+++ b/src/client/app/add/add.html
@@ -1,7 +1,8 @@
 <h1>Add</h1>
 <p>Choose a Repo to Add to Your Dashboard</p>
+<div class='add-repo'><span ng-show="repoAdded">Added <strong class="addedRepo">{{newRepo}}</strong> to your Dashboard</span></div>
 <ul>
   <li ng-click="postDashboard(repo)" ng-repeat="repo in subsc">
-    {{ repo.full_name }}
+    <div class="button">{{ repo.full_name }}</div>
   </li>
 </ul>
