Stub a updateLastCommit button for dashboard 	modified:   src/client/app/dashboard/dashboard.html 	modified:   src/client/app/dashboard/dashboard.js 	modified:   src/client/styles/style.css

--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -3,8 +3,11 @@
   <a href="#/{{dashboard.org_name}}/{{dashboard.repo_name}}/setup"><button type="button" class="btn btn-info btn-sm">Setup instructions</button></a>
 
   <h1>{{dashboard.org_name}} / <a href="{{dashboard.repo_link}}">{{dashboard.repo_name}}</a> - {{dashboard.branch}} branch</h1>
-  <h3>The sha1 of the most recent PR merge is:</h3>
-  <h3>{{dashboard.last_commit}}</h3>
+  <div class='lastCommit'>
+    <h3>The sha1 of the most recent PR merge is:</h3>
+    <h3>{{dashboard.last_commit}}</h3>
+    <span> Out of date? </span><button type="button" class="btn btn-info btn-sm" ng-click='updateLastCommit()'>Update to most recent PR merge</button>
+  </div>
 
   <div ng-repeat="user in users">
     <div ng-class="[users, { upToDate: user.up_to_date === 1, outOfDate: user.up_to_date === 0, notSetUp: user.set_up === 0 }]">
