--- a/src/client/index.html
+++ b/src/client/index.html
@@ -28,6 +28,8 @@
     <script src="https://code.angularjs.org/1.5.0-rc.2/angular-mocks.js"></script>
     <script src="https://code.angularjs.org/1.5.0-rc.2/angular-cookies.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+    <script src="lib/angular-socket-io/socket.js"></script>
 
     <!-- Angular Modules -->
     <script src="app/services/services.js"></script>
