Added explanation / styling to add page

--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -1,6 +1,6 @@
 <div class="home">
   <div class="homeTitle">
-    Your Dashboards<a href="#/add"><span class="glyphicon glyphicon-plus-sign"></span></a>
+    Your Dashboards<a href="#/add" ><span class="glyphicon glyphicon-plus-sign" title="Add a new repo"></span></a>
   </div>
   <div class="homeDesc">
       Don't see your board? It may be a private repo. Allow private repo access <a href="">here</a>.
