Added search bar to filter by repo

--- a/src/client/app/add/add.html
+++ b/src/client/app/add/add.html
@@ -6,7 +6,12 @@
   </div>
 
   <div class="filterTextField">
-    <input type="text" class="form-control" id="filterRepos" placeholder="Filter repos">
+    <table>
+      <tr>
+        <td width="10%"><span class="glyphicon glyphicon-search"></td>
+        <td width="90%"><input type="text" class="form-control" id="filterRepos" placeholder="Filter repos"></td>
+      </tr>
+    </table>
   </div>
 
   <table class="table tablecss table-hover">
