--- a/src/client/app/add/add.html
+++ b/src/client/app/add/add.html
@@ -9,14 +9,14 @@
     <table>
       <tr>
         <td width="10%"><span class="glyphicon glyphicon-search"></td>
-        <td width="90%"><input type="text" class="form-control" id="filterRepos" placeholder="Filter repos"></td>
+        <td width="90%"><input type="text" class="form-control" id="filterRepos" placeholder="Filter repos" ng-model='search'></td>
       </tr>
     </table>
   </div>
 
   <table class="table tablecss table-hover">
-    <tr class="homeRows" ng-repeat="repo in subsc">
-      <td><span class="glyphicon glyphicon-inbox"></span><a ng-click="postDashboard(repo)">{{ repo.full_name }}</a></td>
+    <tr class="homeRows" ng-repeat="repo in subsc | filter:search | orderBy:'full_name'">
+      <td><span class="glyphicon glyphicon-inbox"></span><a ng-click="postDashboard(repo)">{{repo.full_name}}</a></td>
     </tr>
   </table>
 
