Created login page, hide nav in login page

--- a/src/client/app/login/login.html
+++ b/src/client/app/login/login.html
@@ -1,1 +1,9 @@
-<li><a href="login/github">Login with Github</a></li>
+<div class="loginImg">
+  <img src="https://c2.staticflickr.com/2/1476/25342880284_b01b8ace11_o.jpg">
+</div>
+
+<div class="loginBtn">
+  <a class="btn btn-block btn-social btn-github" href="login/github">
+    <span class="fa fa-github"></span> Sign in with GitHub
+  </a>
+</div>
