--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,17 +6,21 @@
     <title>GitSpy</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link ref="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.min.css">
   </head>
 
   <body>
     <!-- Nav Bar -->
     <header>
-      <nav>
-        <ul>
-          <li><a href="#/">Home</a></li>
-          <li><a href="#/logout">Logout</a></li>
-        </ul>
-      </nav>
+      <div ng-controller="LoginController">
+        <nav ng-hide="isActivePage('/login')">
+          <ul>
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/logout">Logout</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <!-- Angular Views -->
