--- a/src/client/app/add/add.html
+++ b/src/client/app/add/add.html
@@ -1,8 +1,8 @@
 <div class="add">
-  <div class="addTitle">Spy on a Repo <a href="#/"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a></div>
+  <div class="addTitle">Join a Dashboard <a href="#/"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a></div>
 
   <div class="addDesc">
-    Select a Github repository you would like to spy on. Don't see your organization's repos? Make sure you've granted GitSpy access <a href="https://github.com/settings/connections/applications/f6813881ccb66bdfc9be">here</a>. Don't see your repository? Make sure that the repo is public or grant access to the private repo <a href="">here</a>.
+    Select a GitHub repository to join its GitSpy dashboard. Don't see your organization's repo? Make sure you are <strong>watching</strong> the repo on GitHub.com. (You can unwatch the repo afterwards if you want.) <!--Make sure you've granted GitSpy access <a href="https://github.com/settings/connections/applications/f6813881ccb66bdfc9be">here</a>. Don't see your repository? Make sure that the repo is public or grant access to the private repo <a href="">here</a>.-->
   </div>
 
   <div class="filterTextField">
