--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,10 +14,19 @@
     <!-- Nav Bar -->
     <header>
       <div ng-controller="LoginController">
-        <nav ng-hide="isActivePage('/login')">
-          <ul>
-            <li><a href="#/">Home</a></li>
-            <li><a href="#/logout">Logout</a></li>
+        <nav class="navbar navbar-light bg-faded" ng-hide="isActivePage('/login')">
+          <a class="navbar-brand" href="http://www.gitspy.com"><img src="https://c2.staticflickr.com/2/1564/25950557116_5baa0648ef_s.jpg"></a>
+
+          <ul class="nav navbar-nav pull-right">
+            <li class="nav-item active">
+              <a class="nav-link" href="#/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#/about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#/logout">Logout</a>
+            </li>
           </ul>
         </nav>
       </div>
