--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,7 +15,7 @@
     <header>
       <div ng-controller="LoginController">
         <nav class="navbar navbar-light bg-faded" ng-hide="isActivePage('/login')">
-          <a class="navbar-brand" href="http://www.gitspy.com"><img src="https://c2.staticflickr.com/2/1564/25950557116_5baa0648ef_s.jpg"></a>
+          <a class="navbar-brand" href="#/"><img src="https://c2.staticflickr.com/2/1564/25950557116_5baa0648ef_s.jpg"></a>
 
           <ul class="nav navbar-nav pull-right">
             <li class="nav-item active">
