Fixed error throw in about page

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -50,6 +50,7 @@
     <script src="app/logout/logout.js"></script>
     <script src="app/home/home.js"></script>
     <script src="app/add/add.js"></script>
+    <script src="app/about/about.js"></script>
     <script src="app/setup/setup.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/app.js"></script>
