--- a/src/client/app/about/about.html
+++ b/src/client/app/about/about.html
@@ -3,7 +3,7 @@
 
   <div class="aboutSubTitles">Our Mission</div>
   <div class="missionDesc">
-    Health goth hashtag neutra before they sold out, hoodie pug scenester aesthetic. Ethical artisan health goth chicharrones, art party intelligentsia gluten-free sartorial. Put a bird on it distillery ramps, authentic williamsburg ethical craft beer quinoa chillwave direct trade messenger bag. Pinterest next level cray, gentrify hoodie pabst readymade retro whatever 90's migas post-ironic williamsburg street art vice. Meditation helvetica locavore roof party. Everyday carry four dollar toast actually cold-pressed, aesthetic hella cardigan. Chillwave knausgaard whatever cred lumbersexual cold-pressed.
+    To save the world one pull request and merge at a time. Get RAAD with GitSpy <span class="fa fa-angellist"></span>
   </div>
 
   <div class="aboutSubTitles">Who Are We?</div>
