--- a/src/client/app/setup/setup.html
+++ b/src/client/app/setup/setup.html
@@ -1,16 +1,24 @@
-<h1>Setup</h1>
+<div class="setup">
+  <div class="setupTitle">
+    Setup<a href="#/"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a>
+  </div>
+
+  <div class="setupBody">
+      <div><b>1)</b> Download, unzip, and move the
+      <strong><a href="/gitSpy.zip" download="gitSpy">GitSpy</a></strong>
+      folder into the root directory of your local {{orgName + '/' + repoName}} repository</div>
+      <div><b>2)</b> In your terminal, run the command "<strong>node gitSpy/gitSpyInit.js</strong>" from your project's root folder.</br>This will add GitSpy post-commit hooks to your repo.</div>
+      <div><b>3)</b> Add "<strong>gitSpy/*</strong>" to your .gitignore file to avoid pushing your private GitSpy keys to GitHub</div>
+      <div><b>4)</b> Replace the placeholder values in the KEY_USERS.js file with the ones below
+        <ul><strong>user_id</strong>: {{users_id}},</ul>
+        <ul><strong>dashboard_id</strong>: {{dashboards_id}}</ul>
+      </div>
+      <div><b>5)</b> Make a commit to start tracking your local file changes on GitSpy</div>
+      <div><b>6)</b> You are now setup with GitSpy!  <("<) (^''^) (>")> </div>
+  </div>
+
+</div>
 
 
-<ol style="font-size:125%">
-  <li>Download, unzip, and move the
-  <strong><a href="/gitSpy.zip" download="gitSpy">GitSpy</a></strong>
-  folder into the root directory of your local {{orgName + '/' + repoName}} repository</li>
-  <li>In your terminal, run the command "<strong>node gitSpy/gitSpyInit.js</strong>" from your project's root folder.</br>This will add GitSpy post-commit hooks to your repo.</li>
-  <li>Add "<strong>gitSpy/*</strong>" to your .gitignore file to avoid pushing your private GitSpy keys to GitHub</li>
-  <li>Replace the placeholder values in the KEY_USERS.js file with the ones below
-    <ul><strong>user_id</strong>: {{users_id}},</ul>
-    <ul><strong>dashboard_id</strong>: {{dashboards_id}}</ul>
-  </li>
-  <li>Make a commit to start tracking your local file changes on GitSpy</li>
-  <li>Now you are setup with GitSpy  <("<) (^''^) (>")> </li>
-</ol>
+
+
