--- a/src/client/app/setup/setup.html
+++ b/src/client/app/setup/setup.html
@@ -5,16 +5,16 @@
 
   <div class="setupBody">
       <div><b>1)</b> Download, unzip, and move the
-      <strong><a href="/gitSpy.zip" download="gitSpy">GitSpy</a></strong>
+      <strong><a href="/gitSpy.zip" download="gitSpy">gitSpy</a></strong>
       folder into the root directory of your local {{orgName + '/' + repoName}} repository</div>
       <div><b>2)</b> In your terminal, run the command "<strong>node gitSpy/gitSpyInit.js</strong>" from your project's root folder.</br>This will add GitSpy post-commit hooks to your repo.</div>
       <div><b>3)</b> Add "<strong>gitSpy/*</strong>" to your .gitignore file to avoid pushing your private GitSpy keys to GitHub</div>
-      <div><b>4)</b> Replace the placeholder values in the KEY_USERS.js file with the ones below
+      <div><b>4)</b> Replace the placeholder values in the USER_KEYS.js file with the ones below
         <ul><strong>user_id</strong>: {{users_id}},</ul>
         <ul><strong>dashboard_id</strong>: {{dashboards_id}}</ul>
       </div>
       <div><b>5)</b> Make a commit to start tracking your local file changes on GitSpy</div>
-      <div><b>6)</b> You are now setup with GitSpy!  <("<) (^''^) (>")> </div>
+      <div><b>6)</b> You are now setup with GitSpy!</div>
   </div>
 
 </div>
