--- a/src/client/app/setup/setup.html
+++ b/src/client/app/setup/setup.html
@@ -1,6 +1,6 @@
 <div class="setup">
   <div class="setupTitle">
-    Setup<a href="#/"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a>
+    Setup<a href="javascript:history.back()"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a>
   </div>
 
   <div class="setupBody">
