--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -25,7 +25,7 @@
       <div ng-class="[users, { upToDate: user.last_pulled_commit === dashboard.last_commit, outOfDate: user.last_pulled_commit !== dashboard.last_commit, notSetUp: user.set_up === 0 }]">
         <div class="dashboardUserCommit">
           <span ng-show="user.last_pulled_commit === dashboard.last_commit" class="status"><span class="glyphicon glyphicon-ok-sign"></span> {{user.name}} has pulled {{dashboard.last_commit}}</span>
-          <span ng-show="user.last_pulled_commit !== dashboard.last_commit && user.set_up" class="status"><span class="glyphicon glyphicon-exclamation-sign"></span> {{user.name}} needs to git pull the latest </span>
+          <span ng-show="user.last_pulled_commit !== dashboard.last_commit && user.set_up" class="status"><span class="glyphicon glyphicon-exclamation-sign"></span> {{user.name}} needs to git pull</span>
           <div ng-show="!user.set_up" class="status"><span class="glyphicon glyphicon-exclamation-sign"></span> {{user.name}} needs to set up</div>
         </div>
 
