Add pagination function to Add Dashboard page On branch dev Changes to be committed: modified:   src/client/app/add/add.html modified:   src/client/app/add/add.js modified:   src/server/config/helpers.js modified:   src/server/config/routes.js modified:   src/server/query/github.js modified:   src/server/request-handlers/users.js

--- a/src/client/app/add/add.html
+++ b/src/client/app/add/add.html
@@ -24,9 +24,9 @@
     </tr>
   </table>
   <div class="pages">
-      <a ng-click='firstPage()'> First }}</a>
-      <a ng-click='prevPage()'> Prev }}</a>
-      <a ng-click='nextPage()'> Next }}</a>
-      <a ng-click='lastPage()'> Last }}</a>
+      <a ng-click="pages('first')"> First </a>
+      <a ng-click="pages('prev')"> Prev </a>
+      <a ng-click="pages('next')"> Next </a>
+      <a ng-click="pages('last')"> Last </a>
   </div>
 </div>
