Page change buttons and overall styling

--- a/src/client/app/about/about.html
+++ b/src/client/app/about/about.html
@@ -1,4 +1,4 @@
-<div class="about">
+<div class="about" ng-animate-ref="about">
   <div class="aboutTitle">About <a href="#/"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a></div>
 
   <div class="aboutSubTitles">Our Mission</div>
