--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="dashboard" ng-controller='DashboardController'>
+<div class="dashboard" ng-controller='DashboardController' ng-animate-ref="dashboard">
 
   <div ng-show="loading" class="spinner">
     <img src="https://d13yacurqjgara.cloudfront.net/users/82092/screenshots/1073359/spinner.gif">
