--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -1,4 +1,4 @@
-<div class="home">
+<div class="home" ng-animate-ref="home">
   <div class="homeTitle">
     Your Dashboards<a href="#/add" ><span class="glyphicon glyphicon-plus-sign" title="Add a new repo"></span></a>
   </div>
