--- a/src/client/app/login/login.html
+++ b/src/client/app/login/login.html
@@ -1,4 +1,4 @@
-<div class="loginImg">
+<div class="loginImg" ng-animate-ref="loginImg">
   <img src="https://c2.staticflickr.com/2/1476/25342880284_b01b8ace11_o.jpg">
 </div>
 
