--- a/src/client/app/setup/setup.html
+++ b/src/client/app/setup/setup.html
@@ -1,4 +1,4 @@
-<div class="setup">
+<div class="setup" ng-animate-ref="setup">
   <div class="setupTitle">
     Setup<a href="javascript:history.back()"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a>
   </div>
