Remove page transitions

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <!-- Angular Views -->
-    <div ng-view class="fade"><div>
+    <div ng-view><div>
 
     <!-- Dependencies -->
     <script src="https://code.angularjs.org/1.5.0-rc.2/angular.min.js"></script>
