Fix link to repo on dashboard page

--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -6,7 +6,7 @@
 
   <div ng-show="!loading">
     <div class="dashboardTitle">
-      {{orgName}} / <a href="{{dashboard.repo_link}}">{{repoName}}</a><a href="#/"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a>
+      {{orgName}} / <a href="{{repoLink}}">{{repoName}}</a><a href="#/"><span class="glyphicon glyphicon-circle-arrow-left" title="Go back home"></span></a>
     </div>
 
     <div class="dashboardBranch">
