--- a/src/client/app/setup/setup.html
+++ b/src/client/app/setup/setup.html
@@ -9,7 +9,7 @@
       folder into the root directory of your local {{orgName + '/' + repoName}} repository</div>
       <div><b>2)</b> In your terminal, run the command "<strong>node gitSpy/gitSpyInit.js</strong>" from your project's root folder.</br>This will add GitSpy post-commit hooks to your repo.</div>
       <div><b>3)</b> Add "<strong>gitSpy/*</strong>" to your .gitignore file to avoid pushing your private GitSpy keys to GitHub</div>
-      <div><b>4)</b> Replace the key in the USER_KEYS.js file with the one below
+      <div><b>4)</b> Replace the placeholder text in the SIGNATURE_HASH.js file with the one below
         <ul><strong>signature_hash</strong>: "{{signature_hash}}"</ul>
       </div>
       <div><b>5)</b> Make a commit to start tracking your local file changes on GitSpy</div>
