--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -4,11 +4,13 @@
   </div>
 
   <div class="homeDesc">
-    <span ng-show="empty">You don't have any dashboards yet! You should <a href="#/add">add some</a>.</span>
+<span ng-show="empty">You don't have any dashboards yet! You should <a href="#/add">add some</a>.</span>
   </div>
 
   <div ng-show="loading" class="spinner">
-    <img src="https://d13yacurqjgara.cloudfront.net/users/82092/screenshots/1073359/spinner.gif">
+      <i class="fa fa-circle-o-notch fa-4x fa-spin"></i>
+    <!--<img
+        src="https://d13yacurqjgara.cloudfront.net/users/82092/screenshots/1073359/spinner.gif">--!>
   </div>
 
   <table class="table tablecss table-hover">
